# angstgegner

./: .gitignore  README.md
api/: Makefile  pyproject.toml
api/api/: main.py
data_aggregator/: Makefile  README.md  pyproject.toml
data_aggregator/consumer/: api.py  endpoints.py  test.py
data_aggregator/consumer/database/: League.py  connector.py
data_aggregator/manipulator/: filter_league_data.py
data_aggregator/tests/: test_api_football.py
data_aggregator/tests/input/: world_france_germany.json
data_aggregator/util/: common.py
data_collector/: Makefile  README.md  pyproject.toml
data_collector/consumer/: pyproject.toml
data_collector/consumer/consumer/: api.py
data_collector/consumer/consumer/database/: connector.py
data_collector/consumer/tests/: test_api_football.py
frontend/api/: pyproject.toml
