[tool.poetry]
name = "consumer"
version = "2021.12.25.0"
description = ""
authors = ["Angstgegner <engineers@angst-gegner.de>"]

[[tool.poetry.source]]
name = "pypi-gloabl"
url = "https://pypi.python.org/simple"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "1.4.22"
requests = "2.25.0"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
